--- a/src/index.css
+++ b/src/index.css
@@ -148,7 +148,7 @@ a {
 /**** Main CSS *******/
 
 body {
-  background: #ffffff;
+  background: #fff;
   color: #616161;
   font-family: "Roboto", sans-serif;
   line-height: 1.5;
@@ -169,14 +169,14 @@ li {
 a {
   display: inline-block;
   border: 1px solid #616161;
-  padding: 4px 16px;
+  padding: 4px 24px;
 }
 
 /* Styles for Active Project */
 .active {
   color: black;
   background: #262626;
-  padding: 4px 16px;
+  /* padding: 4px 20px; */
 }
 
 /* userDataInputs */
@@ -187,7 +187,31 @@ a {
   display: flex;
   justify-content: space-between;
 }
-
+/* custom input file */
+.custom-file-input::-webkit-file-upload-button {
+  visibility: hidden;
+}
+.custom-file-input::before {
+  content: "Load File";
+  display: inline-block;
+  /* background: linear-gradient(top, #f9f9f9, #e3e3e3); */
+  /* border: 1px solid #999; */
+  border-radius: 3px;
+  padding: 5px 8px;
+  outline: none;
+  white-space: nowrap;
+  -webkit-user-select: none;
+  cursor: pointer;
+  text-shadow: 1px 1px #fff;
+  font-weight: 700;
+  /* font-size: 10pt; */
+}
+.custom-file-input:hover::before {
+  border-color: black;
+}
+.custom-file-input:active::before {
+  background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
+}
 /* DropDown */
 
 .big {
@@ -248,6 +272,13 @@ a {
 .custom-dropdown select[disabled] {
   color: rgba(0, 0, 0, 0.25);
 }
+
+.daigramShape {
+  display: grid;
+  place-items: center;
+  border: 1px solid #eeeae6;
+}
+
 /* isColorInput */
 .isColorInput {
   display: block;
