--- a/src/index.css
+++ b/src/index.css
@@ -137,7 +137,7 @@ input {
 }
 
 a {
-  color: #002e43;
+  color: #4b4a4a;
   text-decoration: none;
 }
 button,
@@ -152,7 +152,7 @@ body {
   color: #616161;
   font-family: "Roboto", sans-serif;
   line-height: 1.5;
-  letter-spacing: 0.5px;
+  letter-spacing: 0.75px;
 }
 .isWrapper {
   max-width: 900px;
@@ -168,15 +168,14 @@ li {
 }
 a {
   display: inline-block;
-  border: 1px solid #616161;
-  padding: 4px 24px;
+  border: 1px solid #797878;
+  padding: 4px 32px;
 }
 
 /* Styles for Active Project */
 .active {
-  color: black;
-  background: #262626;
-  /* padding: 4px 20px; */
+  color: #3b3b3b;
+  background: #d6d4d4;
 }
 
 /* userDataInputs */
@@ -194,17 +193,13 @@ a {
 .custom-file-input::before {
   content: "Load File";
   display: inline-block;
-  /* background: linear-gradient(top, #f9f9f9, #e3e3e3); */
-  /* border: 1px solid #999; */
   border-radius: 3px;
   padding: 5px 8px;
   outline: none;
   white-space: nowrap;
-  -webkit-user-select: none;
   cursor: pointer;
   text-shadow: 1px 1px #fff;
-  font-weight: 700;
-  /* font-size: 10pt; */
+  font-weight: 500;
 }
 .custom-file-input:hover::before {
   border-color: black;
@@ -212,6 +207,7 @@ a {
 .custom-file-input:active::before {
   background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
 }
+
 /* DropDown */
 
 .big {
