--- a/src/index.css
+++ b/src/index.css
@@ -158,7 +158,7 @@ body {
   max-width: 900px;
   width: 100%;
   margin: 0 auto;
-  padding: 1rem 4rem;
+  padding: 2rem 4rem;
   text-align: center;
 }
 /* CUSTOM styles for  Navigation */
@@ -186,6 +186,16 @@ a {
   display: flex;
   justify-content: space-between;
 }
+.uploadSaveFile {
+  width: 950px;
+  justify-content: flex-end;
+}
+label {
+  display: flex;
+  align-items: baseline;
+  margin: 0.5rem 0;
+}
+
 /* custom input file */
 .custom-file-input {
   color: transparent;
@@ -231,6 +241,7 @@ a {
   padding-right: 4.5rem;
   border-radius: 8px;
   outline: none;
+  cursor: pointer;
 }
 .custom-dropdown select::-ms-expand {
   display: none;
@@ -314,6 +325,7 @@ a {
   color: #454545;
   font-weight: normal;
   font-size: 16px;
+  cursor: pointer;
 }
 .fa-undo,
 .fa-redo {
@@ -324,6 +336,7 @@ a {
   display: block;
   color: #a4a3a3;
   font-size: 18px;
+  cursor: pointer;
 }
 .updown-icons {
   width: 28px;
@@ -338,7 +351,6 @@ a {
 .box {
   width: 40px;
   height: 40px;
-  /* background: #000; */
   padding: 0.25rem;
 }
 .daigramWrapper {
